# hr-pulse

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml
backend/: Dockerfile  database.py  process_jobs.py  requirements.txt  save_to_db.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py  tracing.py
backend/azure/: save_to_db.py
backend/tests/: test_azure.py  test_predict.py
data/: data_cleaned.csv  jobs_with_skills.csv
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/dashboard/: page.js
frontend/app/login/: page.js
frontend/app/predict/: page.js
frontend/app/register/: page.js
frontend/components/: JobCard.js  Navbar.js  ProtectedRoute.js  SkillBadge.js
frontend/context/: AuthContext.js
frontend/lib/: api.js
ml/: predict_salary.py
ml/notebooks/: eda.ipynb
