[project]
name = "hr-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-textanalytics>=5.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.133.0",
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]


